tests/error/misc_errors/pattern_no_args2.py
from guppylang import guppy
from tests.util import compile_guppy


@guppy.enum
class Enum:
    North = {"A": int}



@compile_guppy
def main(p: Enum, x: int) -> None:
    match p:
        case Enum.North():
            z = 66

